defaulted to /opt/disk1

--- a/scripts/install.conf
+++ b/scripts/install.conf
@@ -1,6 +1,6 @@
 
 # Install files root directory
-INSTDIR=/root/mycd
+INSTDIR=/opt/disk1
 
 # Web yum/file repository root
 REPO_DOC_ROOT=/var/www/html/repos
